update api google

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -37,6 +37,7 @@
       window.__ENV = {
         backendURL: "%REACT_APP_BACKEND_URL%",
         sandbox: "%REACT_APP_SANDBOX_SDK%",
+        googleApi: "%REACT_APP_APIKEY_GOOGLE%",
       }
     </script>
 
