update button back page send invoice, description, favicon

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -54,7 +54,7 @@
       Pi.init({ version: "2.0", sandbox: runSDKInSandboxMode });
     </script>
     
-    <title></title>
+    <title>EZ Invoice</title>
     <meta
       name="description"
       content=""
